# Chordlock

./: .gitignore  CLAUDE.md  CMakeLists.txt  Chordlock.cpp  Chordlock.hpp  LICENSE  LICENSE.txt  PERFORMANCE_REPORT.md  PROJECT_STRUCTURE.md  README.md  README_JP.md  TODO.md  build_cli.sh  build_test.sh  chordlock.pc.in  chordlock_cli  cli_main.cpp  compile.sh  correct_analysis.py  debug_canonical_logic  debug_canonical_logic.cpp  debug_chords.py  debug_cm_bug  debug_cm_bug.cpp  debug_cmaj7  debug_cmaj7.cpp  debug_cmaj7_specific  debug_cmaj7_specific.cpp  debug_intervals  debug_intervals.cpp  debug_parse_cm7  debug_parse_cm7.cpp  debug_quality  debug_quality.cpp  final_canonical_test  final_canonical_test.cpp  final_comprehensive_test  final_comprehensive_test.cpp  final_web_test.html  fix_test_set.py  (+46 more)
.github/workflows/: deploy.yml  publish-mcp.yml  static.yml
Analysis/: InversionDetector.cpp  InversionDetector.h
CLI/: main.cpp
Core/: AdvancedChordRecognition.cpp  AdvancedChordRecognition.h  CacheObliviousBTree.h  ChordDatabase.cpp  ChordDatabase.h  ChordDatabaseCompat.h  ChordDatabaseOptimized.cpp  ChordIdentifier.cpp  ChordIdentifier.h  ChordNameGenerator.cpp  ChordNameGenerator.h  CompiledTables.h  ErrorHandling.cpp  ErrorHandling.h  IntervalEngine.cpp  IntervalEngine.h  PerfectHash.h  PerformanceStrategy.h  ProgressionAnalyzer.cpp  ProgressionAnalyzer.h  RobinHoodHash.h
Data/: CompiledTables.h  extended_chords.yaml  interval_dict.yaml
Examples/: cli_example.cpp
Tests/: comprehensive_test_set.yaml
Tests/benchmark_tests/: CMakeLists.txt  chord_identification_benchmark.cpp  optimized_lookup_benchmark.cpp
Tests/integration_tests/: CMakeLists.txt  test_advanced_recognition.cpp  test_complete_pipeline.cpp  test_memory_integration.cpp  test_performance_integration.cpp
Tests/integration_tests/test_data/: integration_test_chords.yaml
Tests/unit_tests/: CMakeLists.txt  test_chord_database.cpp  test_chord_identifier.cpp  test_interval_engine.cpp  test_inversion_detector.cpp  test_note_converter.cpp  test_performance.cpp
Tests/unit_tests/test_data/: chord_test_set.yaml  test_chords.yaml
Utils/: MemoryTracker.cpp  MemoryTracker.h  NoteConverter.cpp  NoteConverter.h  OutputFormatter.cpp  OutputFormatter.h  PerformanceProfiler.h
benchmark/: README.md  benchmark.py  benchmark_results.json  compare_results.py  quick_test.py
chordlock-mcp/: .npmignore  .npmrc  CLAUDE_CODE_SETUP.md  README.md  chordlock.wasm  package-lock.json  package.json  test-mcp.js
chordlock-mcp/src/: chordlock.ts  index.ts  server.ts  tools.ts  types.ts
demo/: app.js  chordlock.wasm  index.html  note-detector.js
docs/: .gitignore  FEATURE_FEASIBILITY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  chordlock.wasm  index.html  index.md  installation.md  main.js  package-lock.json  package.json  quick-start.md
docs/.vitepress/: config.js
docs/api/: cli.md  index.md
scripts/: build_all.sh  build_cli.sh  build_test.sh  compile.sh
src/: Chordlock.cpp  Chordlock.hpp  chord_definitions.hpp  chord_types.hpp  chordlock_wasm.cpp  cli_main.cpp  enhanced_chord_hash_table.hpp  enhanced_chord_hash_table.hpp.backup
src/engines/: EnhancedHashLookupEngine.cpp  EnhancedHashLookupEngine.hpp
src/interfaces/: IChordDetectionEngine.hpp
src/processors/: VelocityProcessor.cpp  VelocityProcessor.hpp
src/utils/: simd_utils.hpp
wasm/: CMakeLists.txt  README.md  app.js  build_wasm.sh  index.html  style.css  wasm_binding.cpp
web/: README.md  chord-input.html  chordlock.js  chordlock.wasm  index.html  midi-input.js  piano-sound.js  styles.css  test-reverse.html  test_final.html  test_slash_chord.html  test_wasm.html  test_wasm_fresh.html  test_wasm_functions.html  wasm-loader.js
web/chordlock-mcp/: chordlock.wasm
web_app/: TECHNICAL_REPORT.md  audio-analyzer.js  chord-display.js  chordlock.js  chordlock.wasm  chroma-detector.js  dictionary.html  index.html  key-analyzer.js  simple-piano.html  spectrum-visualizer.js  styles.css
